# cpp-book-live

./: .codespellrc  .gitignore  .markdownlint.json  CONTRIBUTING.md  README.md  book.toml  htiml-snippets.md
.github/workflows/: mdbook.yml
src/: SUMMARY.md  home.md  introduction.md
src/algorithms/: algorithms.md  generic-algos.md  improved-io-project.md  iterators.md  ranges.md  views.md
src/appendix/: A-keywords.md  appendicies.md  appendix.md  callenge-answers.md  compilation-pipeline.md  compiler-vendors.md  devtools.md  keywords.md  operators.md  runtime.md  standard-versions.md  value-categories.md
src/ch01-getting-started/: hello-cmake.md  hello-vcpkg.md  hello-world.md  linux.md  macos.md  windows.md
src/ch01-getting-started/examples/hello_vcpkg/: CMakeLists.txt  CMakePresets.json  main.cxx  vcpkg-configuration.json
src/ch02-guessing-game/: CMakeLists.txt  CMakePresets.json  guessing-game.md  main.cxx
src/ch03-common-concepts/: common-concepts.md  control-flow.md  data-types.md  functions.md  vars-mut.md
src/common-concepts/: comments.md  common-concepts.md  data-types.md  vars-mut.md
src/concurrency/: async.md  atomics.md  barriers.md  basics.md  concurrency.md  cond-vars.md  coroutines.md  executors-senders-receivers.md  latches.md  locks.md  mutexes.md  par-algos.md  semaphores.md  simd.md  sync-techniques.md  terminology.md  threads.md
src/containers/: adaptors.md  bitset.md  containers.md  map.md  mdspan.md  string.md  unordered_map.md  vector.md
src/custom-types/: access-modifiers.md  classes.md  methods.md  (+4 more)
styles/: mdbook-admonish.css
(+79 files in other folders)
